@@ -1,3 +1,7 @@
+12/17/2009
+- bugfix of parent/global variable update at included/merged subtemplates
+- encode final template filepath into filename of compiled and cached files
+
 12/16/2009
 - update of changelog
 - added {include file='foo.tpl' inline}  inline option to merge compiled code of aubtemplate into the calling template
